# cv-detectors-rs

./: .cirrus.yml  .gitignore  Cargo.toml  README.md
examples/: detect.rs
src/: fast.rs  lib.rs  traits.rs  utils.rs
