[package]
name = "cv-detectors-rs"
version = "0.1.0"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
edition = "2018"
documentation = "TODO"
description = "Implementations for commonly used Computer Vision Image Detectors"
readme = "README.md"
homepage = "https://github.com/bergercookie/cv-detectors-rs"
repository = "https://github.com/bergercookie/cv-detectors-rs"
license = "MIT"
keywords = [
    "computer-vision", "algorithms", "robotics", "deep-learning",
    "machine-learning"
]
categories = ["algorithms", "science::robotics"]
publish = true

[badges]

cirrus-ci = { repository = "cv-detectors-rs", branch = "master" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "^0.23.4"
